--- a/src/screens/Books/styles.css
+++ b/src/screens/Books/styles.css
@@ -1,4 +1,31 @@
 .card {
   width: 18rem;
   text-align: center;
+  height: 30rem;
+  background-image: linear-gradient(blue, red);
+  margin-left: 10% !important;
+}
+.card-img-top {
+  height: 15rem;
+}
+.slider-control-bottomcenter {
+  bottom: -10% !important;
+}
+.slider-control-centerleft {
+  left: -5% !important;
+}
+.slider-control-centerright {
+  right: -5% !important;
+}
+.slider {
+  display: flex;
+  justify-content: center;
+}
+.character-name {
+  font-family: "Goldman", sans-serif;
+  font-size: 2.5rem;
+  text-decoration: underline;
+}
+.character-section {
+  margin-top: 5%;
 }
