--- a/src/screens/Cart/styles.css
+++ b/src/screens/Cart/styles.css
@@ -2,5 +2,19 @@
   border: 2px grey solid;
 }
 .book {
-  border: 1px grey solid;
+  padding: 1rem;
+}
+.book-image {
+  height: 10rem;
+  width: 10rem;
+}
+.total {
+  position: absolute;
+  top: 90%;
+  left: 80%;
+  font-family: "Goldman", sans-serif;
+  font-size: 2rem;
+}
+.book-title {
+  font-size: larger;
 }
