bookstore-v1.2.0-added responsiveness-account left

--- a/src/screens/Books/styles.css
+++ b/src/screens/Books/styles.css
@@ -8,6 +8,14 @@
 .card-img-top {
   height: 15rem;
 }
+.character-name {
+  font-family: "Goldman", sans-serif;
+  font-size: 2.5rem;
+  text-decoration: underline;
+}
+.character-section {
+  margin-top: 5%;
+}
 .slider-control-bottomcenter {
   bottom: -15% !important;
 }
@@ -21,11 +29,27 @@
   display: flex;
   justify-content: center;
 }
-.character-name {
-  font-family: "Goldman", sans-serif;
-  font-size: 2.5rem;
-  text-decoration: underline;
+
+@media screen and (max-width: 1000px) {
+  .character-section {
+    margin-top: 10%;
+  }
 }
-.character-section {
-  margin-top: 5%;
+@media screen and (max-width: 424px) {
+  .character-section {
+    margin-top: 17%;
+  }
+  .character-name {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 374px) {
+  .character-name {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  .slider-control-bottomcenter {
+    display: none;
+  }
 }
