--- a/src/screens/Book/styles.css
+++ b/src/screens/Book/styles.css
@@ -1,4 +1,45 @@
+.book-details {
+  margin-top: 5%;
+}
 .book-img {
   height: 15rem;
   width: 12rem;
+}
+.book-title {
+  font-size: 3rem;
+  font-family: "Goldman";
+}
+.description {
+  width: 85%;
+  margin: 0 auto;
+}
+.description-title {
+  font-size: 2rem;
+  font-family: "Sacramento";
+}
+
+@media screen and (max-width: 1000px) {
+  .book-details {
+    margin-top: 10%;
+  }
+  .book-title {
+    font-size: 2rem;
+  }
+  .book-description,
+  .price,
+  .table,
+  .characters {
+    font-size: 0.8rem;
+  }
+  .publish-date {
+    margin-top: 5%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .book-details {
+    margin-top: 15%;
+  }
+  .book-title {
+    font-size: 1.75rem;
+  }
 }
