--- a/src/screens/Cart/styles.css
+++ b/src/screens/Cart/styles.css
@@ -1,12 +1,19 @@
-.cart-item {
-  border: 2px grey solid;
-}
 .book {
   padding: 1rem;
 }
 .book-image {
   height: 10rem;
   width: 10rem;
+}
+
+.book-title {
+  font-size: larger;
+}
+.cart-body {
+  margin-top: 10%;
+}
+.cart-item {
+  border: 2px grey solid;
 }
 .total {
   position: absolute;
@@ -15,6 +22,13 @@
   font-family: "Goldman", sans-serif;
   font-size: 2rem;
 }
-.book-title {
-  font-size: larger;
+@media screen and (max-width: 920px) {
+  .cart-body {
+    margin-top: 15%;
+  }
+}
+@media screen and (max-width: 424px) {
+  .book-total {
+    float: left !important;
+  }
 }
