bookstore-v1.3-cart reducer done and responsive

--- a/src/screens/Cart/styles.css
+++ b/src/screens/Cart/styles.css
@@ -6,7 +6,7 @@
   width: 10rem;
 }
 
-.book-title {
+.cart-title {
   font-size: larger;
 }
 .cart-body {
@@ -30,5 +30,8 @@
 @media screen and (max-width: 424px) {
   .book-total {
     float: left !important;
+  }
+  .cart-body {
+    margin-top: 18%;
   }
 }
