bookstore-v1.4-added feature to edit profile

--- a/src/screens/Account/styles.css
+++ b/src/screens/Account/styles.css
@@ -1,3 +1,9 @@
+.edit-button {
+  color: white !important;
+  position: absolute !important;
+  top: 90% !important;
+  left: 90% !important;
+}
 .profile-body {
   margin-top: 4.2%;
 }
