--- a/public/styles.css
+++ b/public/styles.css
@@ -1,22 +1,18 @@
 a {
-  color: wheat;
+  color: #706c61;
 }
 a:hover {
-  color: gold;
+  color: #333333;
   text-decoration: none;
 }
 .app-bar {
-  background-color: #654062;
-  color: #eff8ff;
+  background-color: #333333 !important;
+  color: #ffffff !important;
 }
 body {
-  background-color: #121221;
-  color: white;
+  background-color: #e1f4f3;
+  color: black;
   text-align: center;
-}
-.navbar {
-  background-color: gold;
-  font-family: "Noto Sans JP", sans-serif;
 }
 
 button:focus {
@@ -36,6 +32,19 @@ button:focus {
 }
 .light-theme-comic-link {
   color: black !important;
+}
+@keyframes loading {
+  from {
+    rotate: (0deg);
+  }
+  to {
+    rotate: (359deg);
+  }
+}
+.page-loader {
+  margin-top: 15%;
+  animation-name: loading;
+  animation-duration: 4s;
 }
 .product-card:hover {
   margin: 0px auto 10px;
