--- a/src/screens/Home/styles.css
+++ b/src/screens/Home/styles.css
@@ -6,25 +6,16 @@
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.secondary-col {
-  font-family: "Sacramento", sans-serif;
-  font-size: 5rem;
-}
-.primary-col {
-  font-family: "Goldman", sans-serif;
-  font-size: 10rem;
-}
 
 #links .container {
-  background-color: honeydew;
+  background-color: #333333;
 }
 
 #links .links-col {
-  background-color: black;
-  color: white;
+  background-color: white;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border: solid honeydew 5px;
+  border: solid #333333 5px;
   border-bottom-left-radius: 25%;
   border-top-right-radius: 25%;
 }
